updated random  systems' git commit for jacobi_masses

--- a/train_models/train_megnoxgb_random.ipynb
+++ b/train_models/train_megnoxgb_random.ipynb
@@ -310,13 +310,7 @@
       "0.5                                                                            \n",
       "SCORE:                                                                         \n",
       "0.90485858                                                                     \n",
-      "ERROR                                                                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ERROR                                                                          \n",
       "0.010043563898175374                                                           \n",
       "HOLDOUT SCORE                                                                  \n",
       "0.9216812194181899                                                             \n",
@@ -1015,7 +1009,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
