--- a/generate_training_data/test_notebooks/reproducibility.ipynb
+++ b/generate_training_data/test_notebooks/reproducibility.ipynb
@@ -252,6 +252,59 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 4.34 ms, sys: 705 µs, total: 5.04 ms\n",
+      "Wall time: 16.4 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:89: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "  warnings.warn(message, RuntimeWarning)\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Binary file was saved with a different version of REBOUND. Binary format might have changed.\n",
+      "  warnings.warn(message, RuntimeWarning)\n",
+      "/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/rebound/rebound/simulationarchive.py:138: RuntimeWarning: Encountered unkown field in file. File might have been saved with a different version of REBOUND.\n",
+      "  warnings.warn(message, RuntimeWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "sa = rebound.SimulationArchive(datafolder+'resonant/simulation_archives/runs/sa0000000.bin')\n",
+    "tmax = sa[1].t\n",
+    "sim = sa[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sim.t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
@@ -290,10 +343,6 @@
     }
    ],
    "source": [
-    "%%time\n",
-    "sa = rebound.SimulationArchive(datafolder+'resonant/simulation_archives/runs/sa0000000.bin')\n",
-    "tmax = sa[1].t\n",
-    "sim = sa[0]\n",
     "times = np.linspace(0, tmax, Nout)\n",
     "sim, val = testsim(sim, times) # one of the data generation functions we run over short period\n",
     "sim.status()"
