--- a/train_models/train_AMD_random.ipynb
+++ b/train_models/train_AMD_random.ipynb
@@ -240,13 +240,7 @@
       "0.8826051572384161                                                             \n",
       "SCORE:                                                                         \n",
       "0.86473116                                                                     \n",
-      "ERROR                                                                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ERROR                                                                          \n",
       "0.007425597607840996                                                           \n",
       "HOLDOUT SCORE                                                                  \n",
       "0.8835763305166068                                                             \n",
