--- a/train_models/train_AMD_resonant.ipynb
+++ b/train_models/train_AMD_resonant.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -24,15 +26,8 @@
     "import dill\n",
     "import sys\n",
     "sys.path.append('../')\n",
-    "from modelfitting import train_test_split, ROC_curve, PR_curve, stable_unstable_hist, calibration_plot, unstable_error_fraction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from modelfitting import train_test_split, ROC_curve, PR_curve, stable_unstable_hist, calibration_plot, unstable_error_fraction\n",
+    "\n",
     "datapath = '/mnt/ssd/Dropbox/Dropbox (Princeton)/workspace/stability/MLstability/training_data/'\n",
     "dset = 'resonant/'\n",
     "featurefolder = 'ressummaryfeaturesxgbv6Norbits10000.0Nout1000/'\n",
@@ -240,13 +235,7 @@
       "0.7013229125359962                                                             \n",
       "SCORE:                                                                         \n",
       "0.68991734                                                                     \n",
-      "ERROR                                                                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "ERROR                                                                          \n",
       "0.015354755382730517                                                           \n",
       "HOLDOUT SCORE                                                                  \n",
       "0.7325878383771327                                                             \n",
