--- a/train_models/train_ressummaryfeaturesxgbv6_random.ipynb
+++ b/train_models/train_ressummaryfeaturesxgbv6_random.ipynb
@@ -219,13 +219,7 @@
       "0.0016381783951015228                                                           \n",
       "HOLDOUT SCORE                                                                   \n",
       "0.9877003987406919                                                              \n",
-      "SCORE:                                                                          \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "SCORE:                                                                          \n",
       "0.98333034                                                                      \n",
       "ERROR                                                                           \n",
       "0.001828130015319172                                                            \n",
