--- a/train_models/train_shadowtimes_resonant.ipynb
+++ b/train_models/train_shadowtimes_resonant.ipynb
@@ -273,13 +273,7 @@
       "HOLDOUT SCORE                                                                  \n",
       "0.5                                                                            \n",
       "SCORE:                                                                         \n",
-      "0.9825997799999999                                                             \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "0.9825997799999999                                                             \n",
       "ERROR                                                                          \n",
       "0.002598053023076748                                                           \n",
       "HOLDOUT SCORE                                                                  \n",
@@ -621,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +624,7 @@
        "Text(0.5, 1.0, 'ROC curve (AUC = 0.988)')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -648,7 +642,7 @@
     }
    ],
    "source": [
-    "roc_auc, fpr, tpr, ROCthresholds = ROC_curve(trainingdatafolder, model, features)\n",
+    "roc_auc, fpr, tpr, rocthresholds = ROC_curve(trainingdatafolder, model, features)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "ax.plot(fpr, tpr)\n",
@@ -658,6 +652,34 @@
     "ax.set_xlabel('False Positive Rate')\n",
     "ax.set_ylabel('True Positive Rate')\n",
     "ax.set_title('ROC curve (AUC = {0:.3f})'.format(roc_auc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threshold 1.9913461208343506, FPR = 0.0, TPR = 0.0\n",
+      "Threshold 0.7078307271003723, FPR = 0.027416038382453736, TPR = 0.9630314232902033\n",
+      "Threshold 0.49577757716178894, FPR = 0.045236463331048665, TPR = 0.977818853974122\n",
+      "Threshold 0.2894887924194336, FPR = 0.067854694996573, TPR = 0.9870609981515711\n",
+      "Threshold 0.13335753977298737, FPR = 0.10006854009595613, TPR = 0.9944547134935305\n",
+      "Threshold 0.05439990386366844, FPR = 0.17272104180945852, TPR = 0.9963031423290203\n",
+      "Threshold 0.029915643855929375, FPR = 0.24057573680603153, TPR = 0.9963031423290203\n",
+      "Threshold 0.02113678678870201, FPR = 0.35023989033584646, TPR = 0.9963031423290203\n",
+      "Threshold 0.00901866890490055, FPR = 0.4167237834132968, TPR = 0.9963031423290203\n",
+      "Threshold 0.0060461582615971565, FPR = 0.5990404386566142, TPR = 0.9981515711645101\n",
+      "Threshold 0.0035482696257531643, FPR = 0.8567511994516792, TPR = 0.9981515711645101\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,len(fpr), 15):\n",
+    "    print(\"Threshold {0}, FPR = {1}, TPR = {2}\".format(rocthresholds[i], fpr[i], tpr[i]))"
    ]
   },
   {
