added final  spock trianing notebook

--- a/generate_training_data/test_notebooks/reproducibility.ipynb
+++ b/generate_training_data/test_notebooks/reproducibility.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,15 +248,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 4.34 ms, sys: 705 µs, total: 5.04 ms\n",
-      "Wall time: 16.4 ms\n"
+      "CPU times: user 2.69 ms, sys: 0 ns, total: 2.69 ms\n",
+      "Wall time: 1.65 ms\n"
      ]
     },
     {
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,13 +290,77 @@
        "0.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "sim.t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---------------------------------\n",
+      "REBOUND version:     \t3.8.3\n",
+      "REBOUND built on:    \tNov 23 2019 10:22:08\n",
+      "Number of particles: \t8\n",
+      "Selected integrator: \twhfast\n",
+      "Simulation time:     \t1.0000000173176938e+06\n",
+      "Current timestep:    \t0.034641\n",
+      "---------------------------------\n",
+      "<rebound.Particle object, m=0.9999960150799597 x=-3.658542143467641e-06 y=-1.949623323935794e-05 z=9.470806349629878e-08 vx=6.872767724455177e-05 vy=-3.73442855666929e-06 vz=3.496108378488267e-07>\n",
+      "<rebound.Particle object, m=3.984920040268468e-06 x=-0.8738958364059268 y=0.4817517647367535 z=-0.003159573737010137 vx=-2.9307195320280233 vy=-5.572709926922893 vz=0.0012280114770667806>\n",
+      "<rebound.Particle object, m=1.2444171101394952e-05 x=0.6063431581766432 y=1.4011530424916374 z=-0.007375445763490789 vx=-4.553768175624738 vy=2.174789434522493 vz=-0.026555396336484776>\n",
+      "<rebound.Particle object, m=2.531702420746453e-07 x=-1.5977605108526833 y=0.5538766686714539 z=0.03817301570906049 vx=-1.5043238809838 vy=-4.4327274873988936 vz=-0.09496801973501136>\n",
+      "<rebound.Particle object, m=0.0 x=-1227839990.7303185 y=2736812867.494354 z=-31193600.880793 vx=-13647020228.676476 vy=-1510521669.9350643 vz=9849391.189090833>\n",
+      "<rebound.Particle object, m=0.0 x=-219874056695447.47 y=-418418943008628.44 z=108757002162.12744 vx=2604230127802628.0 vy=-1436923345876754.8 vz=9517577628668.91>\n",
+      "<rebound.Particle object, m=0.0 x=170812727430571.16 y=-82976928448406.45 z=1678132743417.5918 vx=248445474428163.38 vy=584488282560564.2 vz=-5363885016778.591>\n",
+      "<rebound.Particle object, m=0.0 x=-85461228767213.55 y=-146102890073652.4 z=37333534847963.39 vx=701579403548779.2 vy=-145877757846830.16 vz=74941526079138.94>\n",
+      "---------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "def collision(reb_sim, col):\n",
+    "    reb_sim.contents._status = 5\n",
+    "    return 0\n",
+    "\n",
+    "\n",
+    "com = sim.calculate_com()\n",
+    "if com.x**2 + com.y**2 + com.z**2 + com.vx**2 + com.vy**2 + com.vz**2 > 1.e-16:\n",
+    "    print(\"nonzero com\")\n",
+    "    sim.move_to_com()\n",
+    "\n",
+    "###############################\n",
+    "try: \n",
+    "    sim.collision = 'line' # use line if using newer version of REBOUND\n",
+    "except:\n",
+    "    sim.collision = 'direct'# fall back for older versions\n",
+    "sim.collision_resolve = collision\n",
+    "sim.ri_whfast.keep_unsynchronized = 1\n",
+    "sim.ri_whfast.safe_mode = 0\n",
+    "##############################\n",
+    "ps = sim.particles\n",
+    "sim.init_megno()\n",
+    "\n",
+    "P0 = ps[1].P\n",
+    "times = np.linspace(0, tmax, Nout)\n",
+    "\n",
+    "if sim.integrator != \"whfast\":\n",
+    "    sim.integrator = \"whfast\"\n",
+    "    sim.dt = 2*np.sqrt(3)/100.*P0\n",
+    "    \n",
+    "for i, time in enumerate(times):\n",
+    "    sim.integrate(time, exact_finish_time=0)\n",
+    "sim.status()"
    ]
   },
   {
@@ -350,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +423,7 @@
      "text": [
       "---------------------------------\n",
       "REBOUND version:     \t3.8.3\n",
-      "REBOUND built on:    \tAug 10 2019 12:36:18\n",
+      "REBOUND built on:    \tNov 23 2019 10:22:08\n",
       "Number of particles: \t4\n",
       "Selected integrator: \twhfast\n",
       "Simulation time:     \t1.0000000173176938e+06\n",
