updates for  paper

--- a/train_models/train_AMD_random.ipynb
+++ b/train_models/train_AMD_random.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -1158,50 +1158,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# slice data between ranges of instability times"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# slice data between ranges of instability times"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# things that are just unstable might be very similar to things that are just stable"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# predict at half a billion, then repredict at half a billion whether you'll be unstable at a billion"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# do the summary features change with time?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# try training on just unstable systems"
+    "# Test how many AMD stable systems were actually stable"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model, features, featurefolder = dill.load(open(datapath+\"../models/AMD_random.pkl\", \"rb\")) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AMDstable = (testX['C_AMDnear'] < 1) & (testX['C_AMDfar'] < 1)  & (testX['C_AMDouter'] < 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7628336755646817"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testY[AMDstable].sum()/AMDstable.sum()"
+   ]
   }
  ],
  "metadata": {
